added some logics to the game

--- a/TODO
+++ b/TODO
@@ -9,5 +9,9 @@ TODO :: change popup to game in home page
 TODO :: add record game
 TODO :: add machine learning
 TODO :: add betta zone against computer
+TODO :: add message box in the game
+TODO :: add wizard ability
+TODO :: add fix upgrade the regular assets
+
 
 
