some game logic, profile page wip

--- a/TODO
+++ b/TODO
@@ -1,7 +1,6 @@
 60 :
 TODO :: fix wizard ability
-TODO :: fix upgrade the regular assets
-TODO :: add friend list
+TODO :: fix logics and bug in the game
 TODO :: design friend list
 TODO :: add 2 player game implement
 TODO :: add random component game
