--- a/TODO
+++ b/TODO
@@ -1,18 +1,15 @@
 60 :
 TODO :: fix wizard ability
-TODO :: fix logics and bug in the game
+TODO :: fix logics and bugs in the game
 TODO :: design friend list
 TODO :: add 2 player game implement
 TODO :: add random component game
 TODO :: add message box in the game
-TODO :: add profile page
-TODO :: design profile page
-TODO :: add contact us page
-TODO :: design contact us page
-TODO :: add tables and statistics page
-TODO :: design tables page
+TODO :: finish profile page
 TODO :: add betta zone page
 TODO :: design betta zone page
+TODO :: add tables and statistics page
+TODO :: design tables page
 TODO :: fix cursor when set up the game
 
 80:
