added message box to offline

--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@
 TODO :: fix logics and bugs in the game
 TODO :: design friend list
 TODO :: add random component game
-TODO :: add message box in the game
+TODO :: add message box to online game
 TODO :: finish profile page
 TODO :: add tables and statistics page
 TODO :: design tables page
