tutorial page, need screenshots and text

--- a/TODO
+++ b/TODO
@@ -4,6 +4,7 @@ TODO :: design friend list
 TODO :: add random component game
 TODO :: add message box to online game
 TODO :: finish profile page
+TODO :: finish tutorial page
 TODO :: add tables and statistics page
 TODO :: design tables page
 TODO :: fix cursor when set up the game
