--- a/TODO
+++ b/TODO
@@ -4,6 +4,8 @@ TODO :: add random component game
 TODO :: add message box to online game
 TODO :: finish profile page
 TODO :: set win and lose to firestore doc
+TODO :: q.a game
+
 
 80:
 TODO :: set scalability to server
