endgame: oflline: lose or tie online: tie

--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 60 :
 TODO :: add random component game
-TODO :: design friend list
+TODO :: delete game when finished
+TODO :: add name of inviter to game
+TODO :: add name of invited to game
 TODO :: q.a game
 
 80:
@@ -9,6 +11,3 @@ TODO :: set scalability to server
 100:
 TODO :: add record game
 TODO :: add machine learning
-
-
-
