--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 60 :
 TODO :: add name of inviter to game
 TODO :: add name of invited to game
+TODO :: move firebase to server
 TODO :: q.a game
 
 80:
