--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@
 TODO :: add name of inviter to game
 TODO :: add name of invited to game
 TODO :: move firebase to server
+TODO :: need to fix listenToGameMatch
 TODO :: q.a game
 
 80:
