--- a/TODO
+++ b/TODO
@@ -1,8 +1,7 @@
 60 :
 TODO :: add name of inviter to game
 TODO :: add name of invited to game
-TODO :: move firebase to server
-TODO :: need to fix listenToGameMatch
+TODO :: move login and register to server-side
 TODO :: q.a game
 
 80:
